[gd_scene load_steps=4 format=2]

[ext_resource path="res://cards/handCards.tscn" type="PackedScene" id=1]
[ext_resource path="res://cards/CardManager.gd" type="Script" id=3]
[ext_resource path="res://cards/bessel_arrow.tscn" type="PackedScene" id=4]

[node name="CardManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
tween_speed = 0.3

[node name="bessel_arrow" parent="." instance=ExtResource( 4 )]

[node name="hand_card" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -89.0
margin_right = -32.0
margin_bottom = -89.0

[node name="cemetery" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -147.0
margin_top = -179.0
margin_right = -107.0
margin_bottom = -139.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="deck" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 104.0
margin_top = -177.0
margin_right = 104.0
margin_bottom = -177.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="VBoxContainer" parent="."]
margin_left = 61.0
margin_top = 187.0
margin_right = 168.0
margin_bottom = 294.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_add_card" type="Button" parent="button"]
margin_top = 31.0
margin_right = 107.0
margin_bottom = 51.0
rect_pivot_offset = Vector2( 20.4934, 64.4198 )
text = "add card"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_remove_card" type="Button" parent="button"]
margin_top = 55.0
margin_right = 107.0
margin_bottom = 75.0
rect_pivot_offset = Vector2( 20.4934, 64.4198 )
text = "remove card"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="tween_remove_card" type="Tween" parent="."]

[connection signal="pressed" from="button/btn_add_card" to="." method="_on_btn_add_card_pressed"]
[connection signal="pressed" from="button/btn_remove_card" to="." method="_on_btn_remove_card_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_completed" from="tween_remove_card" to="." method="_on_tween_remove_card_tween_completed"]
